--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.14",
     "axios": "^1.5.1",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/numeral": "^2.0.4",
     "autoprefixer": "^10.4.16",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
