--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.14",
+    "apexcharts": "^3.44.0",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.3",
